--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "framer-motion": "^10.13.1",
+    "jotai": "^2.2.2",
+    "lottie-react": "^2.4.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-font": "^1.2.1",
+    "react-scroll-slider": "^1.0.1",
+    "sass": "^1.63.6",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.3"
   }
 }
